The new navbar is very clean and minimalistic
The dropdown features now work and just need attatching to new pages.
I have added a folder called pages to clean up the file structure 
This required me to update a lot of the import paths 
By using the <Link to=""> tag and adding the urls in my app.jsx i was able to create a functioning navigation system
All of the necessary pages have been created 
My next steps 

Ticket system 
Hotel system 
rewards system 
Animal system 

The ticket system will require me to create a database 
It will combine user email, total tickets, the amounts of each ticket type, cost and the ticket ID 

The hotel system will also need a database 
It will store the user email, check in date, check out date, room ID and cost
I will also need to be able to make sure check in dates dont overlap 

Rewards system will take the total tickets the user has purchased and store them in a table 
Once the tickets are over a cretain number the user will be rewarded 

The animal system will impliment an API that returns information about the desired animal 
https://www.api-ninjas.com/api/animals

27/01/25 
The animalssystem seems unlikely to get created with the approaching deadline 
The ticket frontend has been setup and includes axios so it can be sent to the backend 
I setup the backend tickets model so user purchases could be stored 
error with migrations has caused all backend changes to be reverted 
reused tickets frontend for hotel page
Need to impliment date selection for tickets and hotel 

Django models mockup

Tickets 
email 
ticket type 
ticket date 
ticket ID

After an unsuccessful attempt to create a ticketing system i turned to github
https://github.com/justdjango/django-react-ecommerce

28/01/25
After lots of trail and error the problems i was encountering with the backend adding models to the database 
was because the database needed to be deleted and the migrations needed to be forced 