@@ -23,7 +23,14 @@ class RegisterSerializer(serializers.ModelSerializer):
         user = User.objects.create_user(**validated_data)
         return user
 
-# class TicketSerializer(serializers.ModelSerializer):
-#     class Meta:
-#         model=Tickets
-#         fields = ['id','user','ticket_type','ticket_date','ticket_id']
+class TicketSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = Ticket
+        fields = ['id', 'user', 'ticket_type', 'ticket_date', 'ticket_id']
+        read_only_fields = ['ticket_id']
+
+    def validate_ticket_date(self, value):
+        from datetime import date
+        if value < date.today():
+            raise serializers.ValidationError("The ticket date cannot be in the past.")
+        return value
