@@ -7,5 +7,6 @@ router = DefaultRouter()
 router.register('register', RegisterViewset, basename='register')
 router.register('login', LoginViewset, basename='login')
 router.register('users', UserViewset, basename='users')
-urlpatterns = router.urls
+router.register('tickets', TicketViewSet, basename='tickets')
 
+urlpatterns = router.urls
